add jquery auto resize video window code

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -57,6 +57,12 @@
     </div> <!-- /container -->
 
     {% include 'javascript.html' %}
+    <script type="text/javascript">
+      $(document).ready(function(){
+        {% block jquery %}
+        {% endblock %}
+      });
+    </script>
 
 
   </body>
