--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -13,9 +13,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li class="active"><a href="{% url 'home' %}">Home</a></li>
+            <li><a href="{% url 'category_list' %}">Category List</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
@@ -30,9 +29,12 @@
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="../navbar/">Default</a></li>
-            <li class="active"><a href="./">Static top <span class="sr-only">(current)</span></a></li>
-            <li><a href="../navbar-fixed-top/">Fixed top</a></li>
+          {% if user.is_authenticated %}
+            <li><a href="{% url 'logout' %}">{{ user }} | Logout</a></li>
+          {% else %}
+            <li><a href="{% url 'login' %}">LogIn</a></li>
+            <li><a href="{% url 'register' %}">Register</a></li>
+          {% endif %}
           </ul>
         </div><!--/.nav-collapse -->
       </div>
