--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -38,7 +38,13 @@
   <body>
 
   {% include 'navbar.html' %}
-
+  
+{% for message in messages %}
+    <div class="alert alert-dismissible alert-{{ message.tags }}">
+        <button type="button" class="close" data-dismiss="alert">×</button>
+        {{ message }}
+    </div>
+{% endfor %}
 
     <div class="container">
     	{% block content %}
