--- a/src/templates/video/video_detail.html
+++ b/src/templates/video/video_detail.html
@@ -37,6 +37,7 @@ $(window).bind("resize", function(){
 {{ object.embed_code|safe }}
 </div>
 <br/>
+
 <p>If you like this video share with your friends </p>
 
 <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u={{ object.get_full_url }}"><i class="fa fa-facebook-square fa-3x"></i></a>
@@ -45,4 +46,37 @@ $(window).bind("resize", function(){
 <i class="fa fa-twitter fa-3x" aria-hidden="true"></i>
 </a>
 
+<br/>
+<hr/>
+<div class="row">
+  <div class="col-sm-12">
+      <form method="post">{% csrf_token %}
+          {{ comment_form.as_p }}
+      <input class="btn btn-primary" type="submit" value="comment">
+      </form>
+  </div>
+  <div class="col-sm-12">
+    <h3>Comments and questions</h3>
+    <table class="table">
+    {% for comment in comments %}
+    <tr><td>{{ comment.get_comment }} 
+    <small> via {{ comment.author }} | {{ comment.timestamp | timesince }} ago </small>
+        {% if not comment.is_child %}
+            <li>
+            {% for child in  comment.get_children %}
+
+            <ul> {{ child.get_comment }}
+            <small> via {{ child.author }} | {{ child.timestamp | timesince }} ago </small>
+            </ul>
+            {% endfor %}
+            </li>
+        {% endif %}    
+    </td></tr>
+
+    {% endfor %}
+    </table>
+  </div>
+
+
+</div>
 {% endblock %}
