--- a/src/templates/comment/comment_thread.html
+++ b/src/templates/comment/comment_thread.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 <a href="{{ comment.get_origin }}">Go back?</a>
@@ -17,10 +18,9 @@
             </ul>
             
             <form method="POST" action="{% url 'comment_create' %}">{% csrf_token %}
-            {{ form.as_p }}
             <input type="hidden" name="parent_id" value="{{comment.id}}" />
             <input type="hidden" name="origin_path" value="{{ comment.get_absolute_url }}" />
-            <input class="btn btn-default" type="submit" value="reply" />
+            {% crispy form %}
             </form>
         </div>
         {% endif %}    
