--- a/src/templates/video/video_detail.html
+++ b/src/templates/video/video_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load crispy_forms_tags %}
 <script type="text/javascript">
 {% block jquery %}
 
@@ -65,10 +65,9 @@ $('.reply_link').click(function(e){
 <div class="row">
   <div class="col-sm-12">
       <form method="post" action="{% url 'comment_create' %}">{% csrf_token %}
-          {{ comment_form.as_p }}
-      <input type="hidden" name="video_id" value="{{ object.id }}"/>
-      <input type="hidden" name="origin_path" value="{{ object.get_absolute_url }}">
-      <input class="btn btn-primary" type="submit" value="comment"/>
+        <input type="hidden" name="video_id" value="{{ object.id }}"/>
+        <input type="hidden" name="origin_path" value="{{ object.get_absolute_url }}"/>
+        {% crispy comment_form %}
       </form>
   </div>
   <div class="col-sm-12">
@@ -89,11 +88,10 @@ $('.reply_link').click(function(e){
         <a href="#" class="reply_link">Reply</a> | <a href="{{ comment.get_absolute_url }}" class="view_thread">View Thread</a> 
         <div class="reply_comment" style="display:none;">
             <form method="POST" action="{% url 'comment_create' %}">{% csrf_token %}
-            {{ comment_form.as_p }}
-            <input type="hidden" name="parent_id" value="{{comment.id}}" />
-            <input type="hidden" name="video_id" value="{{comment.video.id}}"/>
-            <input type="hidden" name="origin_path" value="{{comment.get_origin }}"/>
-            <input class="btn btn-default" type="submit" value="reply" />
+                <input type="hidden" name="parent_id" value="{{comment.id}}" />
+                <input type="hidden" name="video_id" value="{{comment.video.id}}"/>
+                <input type="hidden" name="origin_path" value="{{comment.get_origin }}"/>
+                {% crispy comment_form  %}
             </form>
         </div>
         {% endif %}    
