--- a/src/templates/comment/comment_thread.html
+++ b/src/templates/comment/comment_thread.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{%  load humanize %}
 {% load crispy_forms_tags %}
 
 {% block content %}
@@ -7,12 +8,12 @@
     <h3>Comments and questions</h3>
     <table class="table">
     <tr><td>{{ comment.get_comment }} 
-    <small> via {{ comment.author }} | {{ comment.timestamp | timesince }} ago </small>
+    <small> via {{ comment.author }} | {{ comment.timestamp | naturaltime }} ago </small>
         {% if not comment.is_child %}
             <ul>
             {% for child in  comment.get_children %}
             <li>{{ child.get_comment }}
-            <small> via {{ child.author }} | {{ child.timestamp | timesince }} ago </small>
+            <small> via {{ child.author }} | {{ child.timestamp | naturaltime }} ago </small>
             </li>
             {% endfor %}
             </ul>
