--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -15,22 +15,15 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="{% url 'home' %}">Home</a></li>
             <li><a href="{% url 'category_list' %}">Category List</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
+
           </ul>
           <ul class="nav navbar-nav navbar-right">
           {% if user.is_authenticated %}
-            <li><a href="#" class="notification-toggle">Notifications</a></li>
+             <li class="dropdown">
+              <a href="#" class="dropdown-toggle notification-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Notifications <span class="caret"></span></a>
+              <ul class="dropdown-menu" id="notification-dropdown" role="menu">
+              </ul>
+            </li>           
             <li><a href="{% url 'logout' %}">{{ user }} | Logout</a></li>
           {% else %}
             <li><a href="{% url 'login' %}">LogIn</a></li>
