--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -20,7 +20,7 @@
           <ul class="nav navbar-nav navbar-right">
           {% if user.is_authenticated %}
              <li class="dropdown">
-              <a href="#" class="dropdown-toggle notification-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Notifications <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle notification-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-inbox" aria-hidden="true"></span><span class="caret"></span></a>
               <ul class="dropdown-menu" id="notification-dropdown" role="menu">
               </ul>
             </li>           
