Created an billing app, user account can select to become one year or month member in upgrade view. Had added receiver handler with user_logged_in signal in myuser model and post_save become_member signals in membership model.

--- a/src/templates/video/video_detail.html
+++ b/src/templates/video/video_detail.html
@@ -77,6 +77,9 @@ $('.reply_link').click(function(e){
 <a href="{{object.get_previous_vid}}">Previous</a>
 {% endif %}
 <hr/>
+
+  {% if comment_form and comment %}
+
 <div class="row">
   <div class="col-sm-12">
       <form method="post" action="{% url 'comment_create' %}">{% csrf_token %}
@@ -116,7 +119,7 @@ $('.reply_link').click(function(e){
     {% endfor %}
     </table>
   </div>
-
+{% endif %}
 
 </div>
 {% endblock %}
