--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -13,7 +13,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'home' %}">Home</a></li>
+            <li><a href="{% url 'home' %}">Home</a></li>
             <li><a href="{% url 'category_list' %}">Category List</a></li>
 
           </ul>
