--- a/src/templates/billing/upgrade.html
+++ b/src/templates/billing/upgrade.html
@@ -6,8 +6,9 @@
 <form method="post" action="">{% csrf_token %}
 
 <p>Becom a member?</p>
-    <p><input type="radio" name="month" value="1" aria-label="select as monthly membership" checked> One Month Membership</p>
+    <p><input type="radio" name="month" value="1" aria-label="select as monthly membership" > One Month Membership</p>
     <p><input type="radio" name="month" value="12" aria-label="select as year membership"> One Year Membership</p>
+    <p><input type="radio" name="trans" value="25" aria-label="trans 25 dollars membership fee"> Trans 25 dollars membership fee</p>
 <input type="hidden" name="member" value="True"/>
 <input type="submit" class="btn btn-default" value="submit" />
     
