--- a/src/templates/billing/upgrade.html
+++ b/src/templates/billing/upgrade.html
@@ -1,5 +1,14 @@
 {% extends "base.html" %}
 
+<script >
+{% block jquery %}
+    braintree.setup( '{{client_token}}', "dropin", {
+        container: 'dropin-container',
+        form: 'checkout-form',
+    });
+{% endblock %}
+</script>
+
 {% block content %}
 <div class="row">
   <div class="col-sm-6 col-sm-offset-3" >
@@ -14,6 +23,15 @@
     
 </form>
 </div>
-
 </div>
+<hr/>
+<div class="row">
+<div class="col-sm-6 col-sm-offset-3">
+<form id="checkout-form" method="post" action=".">{% csrf_token %}
+<div id="dropin-container" ></div>
+ <input type='submit' class='btn btn-default btn-block' value='Pay'/>
+</form>
+</div>
+</div>
+
 {% endblock %}
