accept credit cards and paypal

--- a/src/templates/video/video_detail.html
+++ b/src/templates/video/video_detail.html
@@ -78,7 +78,7 @@ $('.reply_link').click(function(e){
 {% endif %}
 <hr/>
 
-  {% if comment_form and comment %}
+  {% if comment_form  %}
 
 <div class="row">
   <div class="col-sm-12">
